# JoseBlanca.github.io

./: .gitignore  404.html  cat.html  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  pyproject.toml  rincones.md  sitemap.xml  situacion_covid_por_ca_ultimo_mes.html  web_jblanca.code-workspace
blog/: index.html
blog/archive/2025/: index.html
building_scripts/: build_web.py  config.py  requirements.txt  sync_to_githubio.py
clases/: bioetica.html
covid/: index.html  situacion_covid_AN.html  situacion_covid_AR.html  situacion_covid_AS.html  situacion_covid_CB.html  situacion_covid_CE.html  situacion_covid_CL.html  situacion_covid_CM.html  situacion_covid_CN.html  situacion_covid_CT.html  situacion_covid_EX.html  situacion_covid_GA.html  situacion_covid_IB.html  situacion_covid_MC.html  situacion_covid_MD.html  situacion_covid_ML.html  situacion_covid_NC.html  situacion_covid_PV.html  situacion_covid_RI.html  situacion_covid_VC.html  situacion_covid_por_ca.html  situacion_covid_spa.html
covid19/plots/: index.html
cursos/: index.html  index.md
cursos/bioinf_biotech/: covid.html  feed.xml  index.html  norms.html  prev_knowledge.html
edu/: index.html
edu/learning_programming_in_ai_age/: index.html
el_oficio_de_la_duda/: index.html
el_oficio_de_la_duda/files/: el_oficio_de_la_duda.azw3  el_oficio_de_la_duda.epub  el_oficio_de_la_duda.mobi
phi_sci/: index.html
popgen101/: index.html
rincones/: index.html
web_root_mkdocs_source/: mkdocs.yml  todo.txt
zen_del_explorador_racional/: index.html
(+232 files in other folders)
