[project]
name = "web-jblanca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "ebook-building",
    "file-filters",
    "lxml>=5.3.0",
    "mkdocs-material>=9.5.36",
    "mkdocs>=1.6.1",
    "ruamel-yaml>=0.18.6",
]

[tool.uv.sources]
ebook-building = { path = "../../devel/ebook_building", editable = true }
file-filters = { path = "../../devel/file_filters", editable = true }
